Size and spacing changes for home cards, fixed home navbar.

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -168,10 +168,11 @@ nav{
 
 @media (max-width: 415px) {
 
-#prog-logo{
-    margin-left: 180%;
+#home-prog-logo{
+    margin-left: 80%;
+    margin-top: 13%;
     height: auto;
-    width: 180px;
+    width: 300px;
     }
 .subpage-logo{
     height: auto;
@@ -189,6 +190,11 @@ nav{
     height: 122px!important;
 }
 
+.home-nav{
+    background-color: white;
+    height: 290px!important;
+}
+
 #flo-gif{
     display:none;
 }
@@ -197,7 +203,7 @@ nav{
     display: block;
     height: 1968px;
     width: 892px;
-    margin-top: 25%;
+    margin-top: 40%;
 }
 
 html{
@@ -220,14 +226,20 @@ html{
 }
 
 .mobile-card-img{
-    height: 275px;
-    width: 275px;
+    height: 305px;
+    width: 305px;
 }
 
 .img-container{
     width: 175px;
-    margin-left: 15%;
+    margin-left: 30%;
     padding-right: 100px;
+}
+
+#firefighter-card, #writing-card{
+    position: absolute;
+    left: 480px;
+    
 }
 
 #mobile-footer{
